@@ -137,8 +137,5 @@
 	      <img src="http://go-mono.com/images/skynet.png"></a>
 	    </td>
 	  </tr>
-	  <tr>
-	    SQL# For GTK# is shown retrieving data from a Microsoft SQL Server 2000 database.
-	  </tr>
 	</table>
 	
